--- a/lab/test.html
+++ b/lab/test.html
@@ -1,4 +1,6 @@
 <html>
+<meta http-equiv="content-Type" content="text/html; charset=iso-8859-1">
+<title>POL 1600</title>
 <style>
 #q, #a{
 font-weight:bold;
