--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ margin-top:50px;
 <p>Some packages from which features will be supported : <a href="http://ctan.org/pkg/array">array</a>, <a href="http://ctan.org/pkg/arydshln">arydshln</a>, <a href="http://ctan.org/pkg/booktabs">booktabs</a>, <a href="http://ctan.org/pkg/colortbl">colortbl</a>, <a href="http://ctan.org/pkg/ctable">ctable</a>, <a href="http://ctan.org/pkg/diagbox">diagbox</a>, <a href="http://ctan.org/pkg/dcolumn">dcolumn</a>, <a href="http://ctan.org/pkg/hhline">hhline</a>, <a href="http://ctan.org/pkg/longtable">longtable</a>, <a href="http://ctan.org/pkg/lscape">lscape</a>, <a href="http://ctan.org/pkg/makecell">makecell</a>, <a href="http://ctan.org/pkg/multirow">multirow</a>, <a href="http://ctan.org/pkg/rotating">rotating</a>, <a href="http://ctan.org/pkg/slashbox">slashbox</a>, <a href="http://ctan.org/pkg/supertabular">supertabular</a>, <a href="http://ctan.org/pkg/tabularx">tabularx</a>, <a href="http://ctan.org/pkg/xcolor">xcolor</a> and more.</p>
 <p>Thank you for your contribution and your support !</p>
 
-<a class="btn btn-default" href="#" role="button">Contribute on KickStarter</a>
+<a class="btn btn-default" href="https://www.kickstarter.com/projects/1646475295/latex-complex-tables-editor" role="button">Contribute on KickStarter</a>
 
 </center>
 
