--- a/preview/index.html
+++ b/preview/index.html
@@ -19,6 +19,9 @@
 	</script>
 	<script type="text/javascript" src="toHTML.js">
 	</script>
+
+	<script type="text/javascript" src="latex-import.js">
+	</script>
 </head>
 
 <body>
@@ -116,6 +119,7 @@
 	<option value="latex">LaTeX</option>
 	<option value="plain">Plain TeX</option>
 	<option value="md">Markdown</option>
+	<option value="html">HTML</option>
 	</select>
 						</div>
 						<div class="form-group" data-option-group="latex">
@@ -149,6 +153,9 @@
 						</div>
 						<div class="form-group" data-option-group="plain" style="display:none;">
 							<h4>Plain TeX options</h4>
+						</div>
+						<div class="form-group" data-option-group="html" style="display:none;">
+							<h4>HTML options</h4>
 						</div>
 					</div>
 
@@ -235,7 +242,10 @@
       <div class="modal-body">
         <div class="row">
 		<div class="col-md-6 text-center">
-<center>			<table id="create_table">
+<center><div>
+
+<span id="create_table_x">1</span> x <span id="create_table_y">1</span></div>
+			<table id="create_table">
 			</table></center>
 
 <p>- or -</p>
@@ -251,13 +261,15 @@
 		</div>
 		<div class="col-md-6">
 			<div class="form-group">
-				<select class="form-control">
+				<select class="form-control" id="import_format">
+					<option value="auto">Auto</option>
 					<option value="json">JSON</option>
+					<option value="latex">LaTeX</option>
 				</select></div>
 			<div class="form-group">
 				<textarea class="form-control" id="import_value" placeholder="Content of your file to import"></textarea>
 			</div><div class="text-center">
-			<button type="button" class="btn btn-primary" onclick="table.importFromJSON(JSON.parse($id('import_value').value))$('#myModal').modal('hide')">Import the content of a file</button></div>
+			<button type="button" class="btn btn-primary" onclick="table.import();$('#myModal').modal('hide')">Import the content of a file</button></div>
 <p class="text-center">- or -</p>
 <p>Paste here a table from a webpage, a Word document, an Excel document or an OpenOffice document.</p>
 <div class="form-control" contenteditable id="extract-div" style="height:auto;max-height:300px;"></div>
@@ -336,6 +348,8 @@
 				var row = this.dataset.row;
 				var col = this.dataset.col;
 				var selected = document.querySelectorAll("#create_table td");
+				$id("create_table_x").innerHTML = col;
+				$id("create_table_y").innerHTML = row;
 				for(var i=0;i<selected.length;i++){
 					var elem = selected[i];
 					if(elem.dataset.row <= row && elem.dataset.col <= col){
