--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 		$(function(){
 			var isIE = /*@cc_on!@*/false || !!document.documentMode;
 			var isEdge = !isIE && !!window.StyleMedia;
-			if(isEdge || true){
+			if(isEdge){
 				$("#edge-info").show();
 			}
 			$('nav a')
