--- a/help.html
+++ b/help.html
@@ -92,4 +92,139 @@ $(function(){
 document.write("t")
 </script><noscript>t</noscript>ables<i>.</i>com
 </div>
+
+<hr>
+<div id="preview" preview="" debounce="150"><h3><a id="Supported_tables_environments_0"></a>Supported tables environments</h3>
+<ul>
+<li>table</li>
+<li>table*</li>
+</ul>
+<p><strong>From <em>rotating</em> package :</strong></p>
+<ul>
+<li>sidewaystable</li>
+</ul>
+<h3><a id="Supported_tabular_environments_8"></a>Supported tabular environments</h3>
+<ul>
+<li>tabular</li>
+<li>tabular*</li>
+</ul>
+<p><strong>From <em>tabularx</em> package :</strong></p>
+<ul>
+<li>tabularx</li>
+<li>tabularx*</li>
+</ul>
+<p><strong>From <em>tabulary</em> package :</strong></p>
+<ul>
+<li>tabulary</li>
+<li>tabulary*</li>
+</ul>
+<p><strong>From <em>longtable</em> package :</strong></p>
+<ul>
+<li>longtable</li>
+</ul>
+<p><strong>From <em>tabu</em> package :</strong></p>
+<ul>
+<li>tabu</li>
+<li>{tabu} to <em>&lt;dim&gt;</em></li>
+<li>{tabu} spread <em>&lt;dim&gt;</em></li>
+<li>tabu*</li>
+<li>{tabu*} to <em>&lt;dim&gt;</em></li>
+<li>{tabu*} spread <em>&lt;dim&gt;</em></li>
+</ul>
+<p><strong>From <em>xtabs</em> package :</strong></p>
+<ul>
+<li>xtabular</li>
+<li>mpxtabular</li>
+</ul>
+<h3><a id="Supported_commands_40"></a>Supported commands</h3>
+<ul>
+<li>\`</li>
+<li>\&amp;</li>
+<li>\%</li>
+<li>\}</li>
+<li>\{</li>
+<li>\_</li>
+<li>\$</li>
+<li>\^</li>
+<li>\[SPACE]</li>
+<li>\&#8217;</li>
+<li>\=</li>
+<li>\.</li>
+<li>\\</li>
+<li>\ae</li>
+<li>\AE</li>
+<li>\bottonrule</li>
+<li>\b</li>
+<li>\c</li>
+<li>\chapter</li>
+<li>\cline</li>
+<li>\cmidrule</li>
+<li>\cr</li>
+<li>\d</li>
+<li>\fg</li>
+<li>\firsthline</li>
+<li>\H</li>
+<li>\hline</li>
+<li>\i</li>
+<li>\j</li>
+<li>\k</li>
+<li>\l</li>
+<li>\L</li>
+<li>\LaTeX</li>
+<li>\lasthline</li>
+<li>\linebreak</li>
+<li>\midrule</li>
+<li>\multicolumn</li>
+<li>\multirow</li>
+<li>\multirowcell</li>
+<li>\multirowhead</li>
+<li>\newline</li>
+<li>\o</li>
+<li>\O</li>
+<li>\oe</li>
+<li>\OE</li>
+<li>\og</li>
+<li>\part</li>
+<li>\r</li>
+<li>\rotcell</li>
+<li>\section</li>
+<li>\ss</li>
+<li>\subsection</li>
+<li>\tabucline</li>
+<li>\TeX</li>
+<li>\textasciitilde</li>
+<li>\textbackslash</li>
+<li>\textbar</li>
+<li>\textbf</li>
+<li>\textit</li>
+<li>\textsl</li>
+<li>\toprule</li>
+<li>\u</li>
+<li>\underline</li>
+<li>\url</li>
+<li>\v</li>
+<li>\verb</li>
+</ul>
+<h3><a id="Partially_supported_commands_108"></a>Partially supported commands</h3>
+<ul>
+<li>\catcode</li>
+<li>\emph</li>
+<li>\hbox</li>
+<li>\hrule</li>
+<li>\noalign</li>
+<li>\vrule</li>
+</ul>
+<h3><a id="Ignored_commands_117"></a>Ignored commands</h3>
+<ul>
+<li>\cite</li>
+<li>\hhline</li>
+<li>\hspace</li>
+<li>\label</li>
+<li>\pageref</li>
+<li>\phantom</li>
+<li>\ref</li>
+<li>\rule</li>
+<li>\vspace</li>
+</ul>
+</div>
 </div>
