--- a/help.html
+++ b/help.html
@@ -1,3 +1,6 @@
+<!doctype>
+<html>
+<head>
 <meta charset="UTF-8"> 
 	<title>Help | LaTeX Tables Editor</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +22,8 @@ $(function(){
 	document.getElementById("ul").appendChild(frag);
 });
 </script>
+</head>
+<body>
 <div class="container"><h2>Help</h2>
 <h4>Summary</h4>
 <ul id="ul">
@@ -153,7 +158,7 @@ document.write("t")
 <li>\\</li>
 <li>\ae</li>
 <li>\AE</li>
-<li>\bottonrule</li>
+<li>\bottomrule</li>
 <li>\b</li>
 <li>\c</li>
 <li>\chapter</li>
@@ -228,3 +233,5 @@ document.write("t")
 </ul>
 </div>
 </div>
+</body>
+</html>
