--- a/help.html
+++ b/help.html
@@ -142,6 +142,16 @@ document.write("t")
 <li>mpxtabular</li>
 </ul>
 <h3><a id="Supported_commands_40"></a>Supported commands</h3>
+
+<ul>
+<li> ``
+<li> ''
+<li> !`
+<li> ?`
+<li> --
+<li> ---
+</ul>
+
 <ul>
 <li>\`</li>
 <li>\&amp;</li>
@@ -161,14 +171,17 @@ document.write("t")
 <li>\bottomrule</li>
 <li>\b</li>
 <li>\c</li>
+<li>\cdashline
 <li>\chapter</li>
 <li>\cline</li>
 <li>\cmidrule</li>
 <li>\cr</li>
 <li>\d</li>
 <li>\fg</li>
+<li>\firsthdashline
 <li>\firsthline</li>
 <li>\H</li>
+<li>\hdashline
 <li>\hline</li>
 <li>\i</li>
 <li>\j</li>
@@ -176,6 +189,7 @@ document.write("t")
 <li>\l</li>
 <li>\L</li>
 <li>\LaTeX</li>
+<li>\lasthdashline
 <li>\lasthline</li>
 <li>\linebreak</li>
 <li>\midrule</li>
@@ -189,7 +203,9 @@ document.write("t")
 <li>\oe</li>
 <li>\OE</li>
 <li>\og</li>
+<li>\P
 <li>\part</li>
+<li>\pounds
 <li>\r</li>
 <li>\rotcell</li>
 <li>\section</li>
@@ -197,12 +213,16 @@ document.write("t")
 <li>\subsection</li>
 <li>\tabucline</li>
 <li>\TeX</li>
+<li>\textasciicircum
 <li>\textasciitilde</li>
 <li>\textbackslash</li>
 <li>\textbar</li>
 <li>\textbf</li>
+<li>\textexclamdown
 <li>\textit</li>
+<li>\textquestionmark
 <li>\textsl</li>
+<li>\textsterling
 <li>\toprule</li>
 <li>\u</li>
 <li>\underline</li>
@@ -212,7 +232,7 @@ document.write("t")
 </ul>
 <h3><a id="Partially_supported_commands_108"></a>Partially supported commands</h3>
 <ul>
-<li>\catcode</li>
+<li>\catcode  (only \catcode`\#=4  , where # is any character, is supported)</li>
 <li>\emph</li>
 <li>\hbox</li>
 <li>\hrule</li>
