--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 			</div>
 			<div id="latex-import-error" style="display:none;color:red;">Your LaTeX table could not be loaded. Help us and <a href="https://github.com/JDMCreator/LaTeXTableEditor/issues" target="_blank">send us the code of your table</a> so we can see what happened.</div>
 			<div class="text-center">
-			<button type="button" class="btn btn-primary" onclick="table.importData();$('#importModal').modal('hide')">Import the content of a file</button></div>
+			<button type="button" class="btn btn-primary" onclick="table.importData();">Import the content of a file</button></div>
 
 
 	</div>
@@ -499,6 +499,7 @@
 				e.preventDefault();
 			}
 		}, true);
+
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -506,6 +507,7 @@
 
   ga('create', 'UA-102898458-1', 'auto');
   ga('send', 'pageview');
+
 		</script>
 </body>
 
