--- a/help.html
+++ b/help.html
@@ -212,6 +212,7 @@ document.write("t")
 <li>\ss</li>
 <li>\subsection</li>
 <li>\tabucline</li>
+<li>\tabularnewline</li>
 <li>\TeX</li>
 <li>\textasciicircum
 <li>\textasciitilde</li>
@@ -228,6 +229,7 @@ document.write("t")
 <li>\underline</li>
 <li>\url</li>
 <li>\v</li>
+<li>\vdashline
 <li>\verb</li>
 </ul>
 <h3><a id="Partially_supported_commands_108"></a>Partially supported commands</h3>
